--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
   <!-- Footer -->
   <footer class="py-4 px-6 text-center text-gray-500 text-sm">
-    <p>© 2023 Tài Xỉu Vui - Phiên bản nâng cấp</p>
+    <p>© 2025 Tài Xỉu Vui - Bản quyền : NVĐ</p>
   </footer>
 
   <script>
@@ -1001,3 +1001,4 @@
   </script>
 </body>
 </html>
+
